--- a/src/index.css
+++ b/src/index.css
@@ -73,9 +73,9 @@ button:focus-visible {
   }
 }
 
-.container{
+/* .container{
   width: 1900px;
-}
+} */
 
 .encabezado{
   text-align: center;
@@ -108,8 +108,10 @@ button:focus-visible {
 .footer{
  text-align: center;
  width: 1500px;
- margin-bottom: 0%;
- margin-top: 150px;
+ margin-left: auto;
+ margin-right: auto;
+ margin-bottom: 18px;
+ margin-top: 132px;
 }
 
 .parrafo{
